# SazNET

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/auth/: router_auth.py
app/auth/repository/: user_repository.py
app/database/: database.py  models.py
app/favorite/: router_favorite.py
app/favorite/repository/: favorite_repo.py
app/profile/: router_profile.py
app/spotify/: router_spotify.py
app/spotify/repository/: spotify_repository.py
app/superuser/: route_superuser.py
app/superuser/repository/: superuser_repo.py
migrations/: env.py
migrations/versions/: 1c6be6ce2073_changed.py  79f9d22ca3b7_added.py  bba88c8743af_changed.py  f395788f743d_changed.py  fa5dda05b6b8_changed.py
